--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Add custom styles below */
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -39,7 +41,8 @@ body {
 }
 
 .ant-btn-primary:hover {
-  background-color: #b91c1c !important; /* red-700 */
+  background-color: #b91c1c !important;
+  /* red-700 */
 }
 
 /* Custom container class */
@@ -191,4 +194,11 @@ body {
   padding: 0.2em 0.4em;
   border-radius: 0.25em;
   font-size: 0.9em;
-} 
+}
+
+/* Leaflet CSS */
+.leaflet-container {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
